--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   padding: 1rem 2rem;
   font-size: 1.5rem;
   font-weight: bold;
-  border-radius: 3px;
+  border-radius: 2rem;
   cursor: pointer;
   transition: all 0.3s;
   box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.1);
